# Volumetric_Clouds

./: .gitignore  CMakeLists.txt  README.md
libraries/json/: json.h
libraries/stb/: stb_image.hpp
shaders/: RayMarching2.glsl  RayMarchingFragment.glsl  clouds_over.glsl  fragment.glsl  fragmentv2.glsl  singlecloudfrag.glsl  ttafrag.glsl  vertex.glsl  waterfrag.glsl  waterskyfrag.glsl
src/: Camera.cpp  Camera.hpp  Init.cpp  Init.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  main.cpp
